--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -4,9 +4,9 @@ name: Update Blog Posts
 on:
   push:
       branches:
-        - master  # 또는 워크플로우를 트리거하고 싶은 브랜치 이름
+        - main  # 또는 워크플로우를 트리거하고 싶은 브랜치 이름
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정에 실행
+    - cron: '24 15 * * *'  # 한국 시간 기준 오전 12:28에 실행
 
 jobs:
   update_blog:
