--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -6,7 +6,7 @@ on:
       branches:
         - main  # 또는 워크플로우를 트리거하고 싶은 브랜치 이름
   schedule:
-    - cron: '24 15 * * *'  # 한국 시간 기준 오전 12:28에 실행
+    - cron: '32 15 * * *'
 
 jobs:
   update_blog:
