--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -1,12 +1,12 @@
 name: Update Blog Posts
-  
 
 on:
   push:
-      branches:
-        - main  # 또는 워크플로우를 트리거하고 싶은 브랜치 이름
+    branches:
+      - main
   schedule:
-    - cron: '0 16 * * *'
+    - cron: '0 0 * * *'  # 매일 자정
+  workflow_dispatch:
 
 jobs:
   update_blog:
@@ -15,12 +15,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
-    - name: Push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git push https://${{ secrets.GH_PAT }}@github.com/heresue/velog.git
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -33,3 +27,15 @@ jobs:
 
     - name: Run script
       run: python scripts/update_blog.py
+
+    - name: Commit and Push changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add .
+        if git diff --cached --quiet; then
+          echo "No changes to commit"
+        else
+          git commit -m "Update blog posts"
+          git push https://${{ secrets.GH_PAT }}@github.com/heresue/velog.git
+        fi
