--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정
+    - cron: '*/10 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -15,6 +15,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Push changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git push https://${{ secrets.GH_PAT }}@github.com/heresue/velog.git
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -27,15 +33,3 @@ jobs:
 
     - name: Run script
       run: python scripts/update_blog.py
-
-    - name: Commit and Push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add .
-        if git diff --cached --quiet; then
-          echo "No changes to commit"
-        else
-          git commit -m "Update blog posts"
-          git push https://${{ secrets.GH_PAT }}@github.com/heresue/velog.git
-        fi
